# discoverable-tph-280

./: .pre-commit-config.yaml  Dockerfile  Dockerfile.testing  Makefile  README.md  README_ui.md  pyproject.toml  requirements.txt  tph_280.service  unit-guage.js
.hook-scripts/: clean-up-pyc-and-pyo-files
discoverable_tph_280/: __main__.py  barometer.py  base.py  bme_280.py  config.py  hygrometer.py  thermometer.py  util.py
