[tool.poetry]
name = "discoverable-garage-door"
version = "0.1.0"
description = ""
authors = ["Tim Daley <timdaley@earthling.net>"]
readme = "README.md"
packages = [{include = "discoverable_tph_280"}]

[tool.poetry.dependencies]
python = "^3.11"
ha-mqtt-discoverable = "^0.9.0"
pydantic-yaml = "^0.11.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
